Fix truncated icon text for 300px card

--- a/less/components/consonant/infobits/icon-with-text.less
+++ b/less/components/consonant/infobits/icon-with-text.less
@@ -17,7 +17,7 @@
     height: auto;
     max-width: @consonant-icon-with-text-img-max-width;
     max-height: @consonant-icon-with-text-img-max-height;
-    margin-right: 8px;
+    margin-right: 4px;
     object-fit: contain;
     user-select: none;
 }
