--- a/less/components/consonant/infobits/text.less
+++ b/less/components/consonant/infobits/text.less
@@ -1,7 +1,7 @@
 .consonant-text-infobit {
     min-width: 0;
     max-width: 100%;
-    margin: 0 0 0 12px;
+    margin: 0 0 0 16px;
 
     .font(
         0.875rem,
@@ -14,4 +14,8 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+}
+
+img + .consonant-text-infobit {
+    margin-left: 4px;
 }
